# sort-rs

./: .gitignore  Cargo.toml  README.md  release.sh
src/: lib.rs  main.rs
