[package]
name = "sort-rs"
version = "0.1.1"
authors = ["Siddharth Borderwala <siddharthborderwala@gmail.com>"]
edition = "2018"
description = "A crate exposing sorting algorithms"
repository = "https://github.com/siddharthborderwala/sort-rs/"
license = "MIT"
keywords = ["algorithms", "sorting"]

[badges]
maintenance = { status = "experimental" }

[lib]
name = "sort"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
